--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<nav class="nav social">
 			<ul class="flat"><a href="https://twitter.com/" title="Twitter"><i data-feather="twitter"></i></a>
 				|
-				<a href="CV_Oct2019.pdf" class="blog_cv">[cv]</a>
+				<a href="CV_Jan2020.pdf" class="blog_cv">[cv]</a>
 				
 				
 			</ul>
