--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 		</div>
 		</div>
 		<div class="footer wrapper">
-	<nav class="nav">
+<!-- 	<nav class="nav">
 		
 		<img src=/Rosa.jpg class="profile_image">
-	</nav>
+	</nav> -->
 </div>
 
 
