--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<nav class="nav social">
 			<ul class="flat"><a href="https://twitter.com/" title="Twitter"><i data-feather="twitter"></i></a>
 				|
-				<a href="CV_Apr2020.pdf" class="blog_cv">[cv]</a>
+				<a href="CV_Mar2020.pdf" class="blog_cv">[cv]</a>
 				
 				
 			</ul>
