--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<span>  </span>
 		</li>
 		
-		<li><em>Is (campaign) money for nothing? The effects of the 2015 Brazilian ban on corporate contributions on procurement outcomes and other forms of campaign contributions.</em>  With Alexandros Cavgias 
+		<li><em>Campaign money for nothing? Understanding the consequences of a ban on corporate contributions: evidence from Brazil.</em>  With Alexandros Cavgias 
 			<span> Presented at the 2020 Conference of the American Political Science Association </span>
 		</li>
 		
@@ -147,6 +147,17 @@
 </div>
 
 
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-159974102-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 <script>
 	feather.replace()
 
