--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 		
 
 		<nav class="nav social">
-			<ul class="flat"><a href="https://twitter.com/f_granella" title="Twitter"><i data-feather="twitter"></i></a>
+			<ul class="flat"><a href="https://twitter.com/f_granella" target="_blank" title="Twitter"><i data-feather="twitter"></i></a>
 				|
-				<a href="CV_Apr2020.pdf" class="blog_cv">[cv]</a>
+				<a href="CV_Apr2020.pdf" target="_blank" class="blog_cv">[cv]</a>
 				
 				
 			</ul>
