--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</script>
 
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Francesco Granella- PhD Student</title><link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Francesco Granella- </title><link rel="apple-touch-icon" sizes="180x180" href="icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="icon.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="icon.png">
 	<link rel="manifest" href="site.webmanifest">
