--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	<div class="site-affilation">
 		<span class="affilation"><ul class="flat">
 				<li class="position">PhD student, Bocconi University</li>
-				<li class="email">[name].[lastname]@unibocconi.it</li>
+				<li class="email">francesco [dot] granella [at] unibocconi.it</li>
 			</ul><ul class="flat">
 				<li class="position">Post-degree researcher, RFF-CMCC European Insitute on Economics and the Environment</li>
-				<li class="email">[name].[lastname]@eiee.org</li>
+				<li class="email">francesco [dot] granella [at] eiee.org</li>
 			</ul></span>
 		
 
@@ -94,6 +94,10 @@
 				<strong>Francesco Granella</strong>, Lara Aleluia Reis, Valentina Bosetti, Massimo Tavoni
 			</span>
 
+			
+			<span class="project_description">
+				Provisionally accepted at <em>Environmental Research Letters</em>
+			</span>
 			
 
 		</li>
