--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 			
 			<a href="https://iopscience.iop.org/article/10.1088/1748-9326/abd3d2" class="publications"> COVID-19 lockdown only partially alleviates health impacts of air pollution in Northern Italy, </a>
 			
-			(2020) Environmental Research Letters.
+			(2020) Environmental Research Letters..
 
 			
 
 			<span class="collaborators">
-				<strong>Francesco Granella</strong>, Lara Aleluia Reis, Valentina Bosetti, Massimo Tavoni
+				<strong>Francesco Granella</strong>, Lara Aleluia Reis, Valentina Bosetti, Massimo Tavoni. Coverage: <a href="https://www.lavoce.info/archives/71376/non-basta-un-lockdown-a-pulire-il-cielo-di-lombardia/">lavoce.info</a> (italian)
 			</span>
 		</li>
 		
