--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			
 			<a href="https://iopscience.iop.org/article/10.1088/1748-9326/abd3d2" class="publications"> COVID-19 lockdown only partially alleviates health impacts of air pollution in Northern Italy, </a>
 			
-			(2020) Environmental Research Letters..
+			(2020) Environmental Research Letters.
 
 			
 
