--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<nav class="nav social">
 			<ul class="flat"><a href="https://twitter.com/F_Granella" target="_blank" title="Twitter"><i data-feather="twitter"></i></a>
 				|
-				<a href="CV_Apr2020.pdf" target="_blank" class="blog_cv">[cv]</a>
+				<a href="CV_Mar2021.pdf" target="_blank" class="blog_cv">[cv]</a>
 				
 				
 			</ul>
