--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			
 			<i>Environmental Research Letters</i>.
 
-			<p><br /> Media: <a href="https://www.lavoce.info/archives/71376/non-basta-un-lockdown-a-pulire-il-cielo-di-lombardia/">lavoce.info</a> (italian)</p> 
+			<p><br /> Media coverage: <a href="https://www.nationalgeographic.com/magazine/article/air-pollution-kills-millions-every-year-like-a-pandemic-in-slow-motion-feature">National Geographic magazine</a>, <a href="https://www.lavoce.info/archives/71376/non-basta-un-lockdown-a-pulire-il-cielo-di-lombardia/">lavoce.info</a>.</p> 
 
 			
 			<span class="code_blog">
