--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<ul>
 		
 		<li>
-			<strong>Francesco Granella</strong>, Lara Aleluia Reis, Valentina Bosetti, Massimo Tavoni 
+			Francesco Granella, Lara Aleluia Reis, Valentina Bosetti, Massimo Tavoni 
 			(2020) &nbsp;
 			
 			
@@ -114,16 +114,16 @@
 	
 	<h4>Work in progress</h4>
 	<ul>
-		<li><em>Air pollution and physical performance</em> 
+		<li><em><a href="PollutionPhysicalPerformance.pdf">You Can’t Run from Air Pollution. The Effect of Pollution on Physical Tasks</a></em> 
+			<span>  </span>
+		</li>
+		
+		<li><em><a href="CrowdOutDonations.pdf">Campaign money for nothing? Understanding the consequences of a ban on corporate contributions: evidence from Brazil.</a></em>  With Alexandros Cavgias 
 			<span>  </span>
 		</li>
 		
 		<li><em>Employment dynamics in the aftermath of urban floods</em> 
 			<span>  </span>
-		</li>
-		
-		<li><em>Campaign money for nothing? Understanding the consequences of a ban on corporate contributions: evidence from Brazil.</em>  With Alexandros Cavgias 
-			<span> Presented at the 2020 Conference of the American Political Science Association </span>
 		</li>
 		
 		<li><em>PATFIND: an algorithm for matching PATSTAT with firm-level data.</em>  With Elena Verdolini 
@@ -135,7 +135,7 @@
 		</li>
 		
 		<li><em>Environmental policy stringency and international collaboration in inventive activity. Evidence from the wind power sector</em> 
-			<span> Presented at the 7th Annual Conference of the Italian Association of Environmental and Resource Economists, 7-8 February 2019, Udine (Italy) </span>
+			<span>  </span>
 		</li>
 		</ul>
 	
