--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	
 	<h4>Work in progress</h4>
 	<ul>
-		<li><em><a href="PollutionPhysicalPerformance.pdf">You Can’t Run from Air Pollution. The Effect of Pollution on Physical Tasks</a></em> 
+		<li><em><a href="PollutionPhysicalPerformance.pdf">You Can’t Run from Air Pollution. The Effects of PM 2.5 on Physical Tasks</a></em> 
 			<span>  </span>
 		</li>
 		
