--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   
     <script>
       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-      ga('create', 'UA-159974102-1', 'auto');
+      ga('create', 'G-6457CF8EGN', 'auto');
       
       ga('require', 'eventTracker');
       ga('require', 'outboundLinkTracker');
@@ -493,7 +493,7 @@
 
 
     <p>I am a Post-Doc at RFF-CMCC European Institute on Economics and the Environment (<a href="https://www.eiee.org/">EIEE</a>). I received my Ph.D. in Public Policy from <a href="https://www.unibocconi.eu/wps/wcm/connect/bocconi/sitopubblico_en/navigation+tree/home/">Bocconi University</a>. Between September 2021 and April 2022 I was a visiting scholar <a href="https://desp.ucdavis.edu/people/frances-c-moore">University of California at Davis</a>.</p>
-<p>My work explores the economic costs of environmental stressors, in particular air pollution.</p>
+<p>My work explores the economic costs of climate change and environmental stressors, in particular air pollution.</p>
 <p>You can contact me at francesco [dot] granella [at] eiee.org</p>
 
 
