--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 
 <head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6457CF8EGN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6457CF8EGN');
+</script>
+
   
 <script type="application/javascript">
 var doNotTrack = false;
