--- a/project/claqc/index.html
+++ b/project/claqc/index.html
@@ -424,7 +424,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/air-pol/">Air pol</a>
+  <a class="badge badge-light" href="/tags/air-pollution/">Air pollution</a>
   
 </div>
 
