--- a/project/inhale/index.html
+++ b/project/inhale/index.html
@@ -426,6 +426,8 @@
   
   <a class="badge badge-light" href="/tags/air-pollution/">Air pollution</a>
   
+  <a class="badge badge-light" href="/tags/publications/">Publications</a>
+  
 </div>
 
 
