--- a/project/tempgdp/index.html
+++ b/project/tempgdp/index.html
@@ -470,6 +470,8 @@
   
   <a class="badge badge-light" href="/tags/climate-change/">Climate change</a>
   
+  <a class="badge badge-light" href="/tags/publications/">Publications</a>
+  
 </div>
 
 
