--- a/project/purifiers/index.html
+++ b/project/purifiers/index.html
@@ -416,6 +416,20 @@
     NewScientist
   </a>
 
+  
+  
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="https://lavoce.info/archives/107853/meno-assenze-se-in-classe-laria-e-pulita/" target="_blank" rel="noopener">
+    <i class="fa fa-newspaper mr-1"></i>
+    LaVoce.info
+  </a>
+
 
 </div>
 
